    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.jabdata.jabtrack.Login"

        android:background="#ffffffff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_top_bg"
                android:padding="10dp"
                android:hint="@string/insert_username"
                android:textColorHint="#cccccc"
                android:drawableLeft="@drawable/user"
                android:drawableStart="@drawable/user"/>
            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bottom_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:hint="@string/insert_password"
                android:textColorHint="#cccccc"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/password"
                android:drawableStart="@drawable/password"/>
            <Button
                android:id="@+id/btnSingIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="4dp"
                android:text="@string/sign_in"
                style="@style/DefaultButtonText"
                android:background="@drawable/button_default_bg"
                />
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="4dp"
                android:text="@string/register"
                style="@style/DefaultButtonText"
                android:background="@drawable/button_default_bg"
                />
        </LinearLayout>

    </RelativeLayout>